// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GoogleMap renders correctly with props and a list of one 1`] = `
<div>
  <div
    center="[object Object]"
    class="mock-google-map"
    mapcontainerstyle="[object Object]"
    options="[object Object]"
    zoom="1"
  >
    <div
      class="mock-marker"
      position="[object Object]"
      title="title1"
    />
  </div>
</div>
`;

exports[`GoogleMap renders correctly with props and a list of one 2`] = `
<div>
  <div
    center="[object Object]"
    class="mock-google-map"
    mapcontainerstyle="[object Object]"
    options="[object Object]"
    zoom="1"
  >
    <div
      class="mock-marker"
      position="[object Object]"
      title="title1"
    />
    <div
      class="mock-info-window"
      options="[object Object]"
      position="[object Object]"
    >
      <a
        href="/picture/uid-bar"
      >
        <h1>
          title1
        </h1>
        <picture>
          <img
            alt="title1"
            height="110"
            image="[object Object]"
            width="164"
          />
        </picture>
      </a>
    </div>
  </div>
</div>
`;

exports[`GoogleMap renders correctly with props and a list of two 1`] = `
<div>
  <div
    center="[object Object]"
    class="mock-google-map"
    mapcontainerstyle="[object Object]"
    options="[object Object]"
    zoom="1"
  >
    <div
      class="mock-marker"
      position="[object Object]"
      title="title1"
    />
    <div
      class="mock-marker"
      position="[object Object]"
      title="title2"
    />
  </div>
</div>
`;

exports[`GoogleMap renders correctly with props and a list of zero 1`] = `
<div>
  <div
    center="[object Object]"
    class="mock-google-map"
    mapcontainerstyle="[object Object]"
    options="[object Object]"
    zoom="1"
  >
    <div
      class="mock-marker"
      position="[object Object]"
      title="title1"
    />
  </div>
</div>
`;
